# iRacingDataCompanionAv

./: .gitignore  CMakeLists.txt  README.md  arch.puml
Archive/: arch.puml
Archive/include/: ConsoleDisplay.h  DataCollector.h  DataModel.h  IDisplay.h  Settings.h
Archive/scripts/: build.sh
Archive/src/: ConsoleDisplay.cpp  DataCollector.cpp
IRDC/: IRDC.sln
IRDC/IRDC/: App.xaml  App.xaml.cs  DataCollector.cs  DataViewModel.cs  IRDC.csproj  MainWindow.xaml  MainWindow.xaml.cs  ResultsModel.cs  SessionInfoModel.cs  TelemetryModel.cs  VisibilityConverter.cs
IRDCav/: IRDCav.sln
IRDCav/IRDCav/: App.axaml  App.axaml.cs  CarNumberConverter.cs  DataCollector.cs  DriverNameConverter.cs  FloatConverter.cs  IRDCav.csproj  IntToLapConverter.cs  Interpolation.cs  PositionConverter.cs  Program.cs  SecToTimeConverter.cs  ViewLocator.cs  WindowTransparency.cs  app.manifest
IRDCav/IRDCav/Models/: FuelDataController.cs  FuelDataModel.cs  LiveDataModel.cs  MicroSectorModel.cs  RaceDataController.cs  RaceDataModel.cs  ResultsModel.cs  SessionInfoModel.cs  TelemetryModel.cs
IRDCav/IRDCav/Properties/: Resources.Designer.cs
IRDCav/IRDCav/Services/: FuelDataController.cs  RaceDataController.cs
IRDCav/IRDCav/ViewModels/: ApplicationViewModel.cs  DataViewModel.cs  InputGraphViewModel.cs  RelativesViewModel.cs  ViewModelBase.cs
IRDCav/IRDCav/Views/: InputGraphWindow.axaml  InputGraphWindow.axaml.cs  MainWindow.axaml  (+7 more)
include/: ConsoleDisplay.h  DataCollector.h  IDisplay.h  Settings.h  SettingsReader.h
src/: ConsoleDisplay.cpp  DataCollector.cpp  Main.cpp
